--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <body>
     <center>
         <h1>Index page</h1>
-        <h4>Sudhir Venkatesh</h4>
+        <h4>Umar Iqbal</h4>
         <table>
             <tr>
                 <th colspan="2">Bootstrap tasks</th>
